<?xml version="1.0" encoding="UTF-8" ?>

<!-- 
   Copyright (c) 2020 Bealeaf Network and Contributors
   All rights reserved. This program and the accompanying materials
   are made available under the terms of the Eclipse Public License v2.0
   which accompanies this distribution, and is available at
   https://github.com/bealeafci/maven/blob/master/LICENSE
  
   Contributors:
      Stefan Kühnel, github-contributors@stefankuehnel.com
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.jacoco</groupId>
	<artifactId>edu.hm.powergrid.maven.java</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>PowerGrid</name>
	<url>https://9bn.de/powergrid/github</url>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<properties>
		<maven.compiler.source>14</maven.compiler.source>
		<maven.compiler.target>14</maven.compiler.target>
	</properties>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<plugins>
			<plugin>
			    <artifactId>maven-compiler-plugin</artifactId>
			    <configuration>
				<release>14</release>
				<compilerArgs>
				    <arg>--enable-preview</arg>
				</compilerArgs>
				<forceJavacCompilerUse>true</forceJavacCompilerUse>
				<parameters>true</parameters>
			    </configuration>
			</plugin>

			<plugin>
			    <artifactId>maven-surefire-plugin</artifactId>
			    <configuration>
				<argLine>--enable-preview</argLine>
			    </configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.2</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
